# geospatial-mcp-services

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
configs/: mcp.docker.example.json
docs/: map-point-tool-contract.md
servers/geonames_wikipedia/: .dockerignore  Dockerfile  README.md  pyproject.toml
servers/geonames_wikipedia/src/geonames_wikipedia_mcp/: __init__.py  clients.py  server.py
servers/geonames_wikipedia/tests/: test_clients.py
servers/incident_analyst/: Dockerfile  README.md  pyproject.toml
servers/incident_analyst/src/incident_analyst_mcp/: __init__.py  analysis.py  sample_data.py  server.py
servers/incident_analyst/tests/: test_analysis.py
