[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geonames-wikipedia-mcp"
version = "0.1.0"
description = "MCP server that enriches map-click coordinates with GeoNames and Wikipedia context."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.13.0"
]

[project.scripts]
geonames-wikipedia-mcp = "geonames_wikipedia_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
